--- a/IEEE_754/ieee.html
+++ b/IEEE_754/ieee.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>IEEE Calculator</title>
+        <title>IEEE 754 Calculator</title>
     </head>
     <body>
-        <label for="hexieee">Enter the hex value of the IEEE 754-1985 code:</label><br><br>
+        <label for="hexieee">Enter the hex value of the IEEE 754 code:</label><br><br>
         <input type= "text" id="hexieee">
         <button onclick="print()">Calculate</button>
         <!-- <input type="submit" value="submit"> -->
