--- a/IEEE_754/ieee.html
+++ b/IEEE_754/ieee.html
@@ -14,6 +14,7 @@
         <div id="exp"></div>
         <div id="sigval"></div>
         <div id="finalval"></div>
+        <div id="warning"></div>
     <script src="ieee.js"></script>
     </body>
 </html>
